--- a/Basics CSS/CSS Selectors/style.css
+++ b/Basics CSS/CSS Selectors/style.css
@@ -1,3 +1,9 @@
 #my-div {
-    font-family: monospace;
+  font-family: monospace;
+}
+
+body {
+  color: #fff;
+  background-color: #232233;
+  color: #ff3;
 }
