--- a/1 - Miro/styles/reset.css
+++ b/1 - Miro/styles/reset.css
@@ -8,3 +8,17 @@ button {
     outline: none;
     background: none;
 }
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
