--- a/2 - PurpleForm/style.css
+++ b/2 - PurpleForm/style.css
@@ -32,6 +32,7 @@ main {
 h1 {
     text-align: center;
     font-size: 2.25rem;
+    margin: 0 0 2rem 0;
 }
 
 form {
@@ -45,12 +46,28 @@ form {
     }
 }
 
-fieldset {
+.form-wrapper {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+fieldset {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: .5rem;
     border: none;
     background-color: #2e2d3d;
     border-radius: 0.625em;
+    padding: 0.7rem 1rem;
+
+    & img {
+        width: 24px;
+        height: 24px;
+    }
+
 }
 
 label {
@@ -77,5 +94,5 @@ button {
     border-radius: 0.625em;
     text-align: center;
     background-color: #6c38cc;
-    padding: 0.75em 0;
+    padding: 0.8rem 0;
 }
